--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,26 @@ section {
     line-height: 100px;
     font-size: 60px;
 }
+
+
+.score{
+    display: inline-flex;
+    flex-direction: row;
+    margin:   0 auto;
+    align-items: center;
+}
+
+
+
+#plyerScors
+{
+    margin: 0 auto;
+    display: inline;
+    margin: 30px;
+}
+
+
+#restart{
+    font-size: 15px;
+    padding: 5px 20px;
+}
